# -PS-06-Intelligent-Intrusion-Detection-System-

./: .gitignore  CMakeLists.txt  README.md  main.cpp  updates.sh
Core/: Types.h
Core/capture/: NetlinkReceiver.cpp  NetlinkReceiver.h  PacketCapture.cpp  PacketCapture.h
Core/detection/: DecisionEngine.cpp  DecisionEngine.h  RuleEngine.cpp  RuleEngine.h
Core/features/: FeatureExtractor.cpp  FeatureExtractor.h
Core/flow/: FlowTable.cpp  FlowTable.h  FlowTracker.cpp  FlowTracker.h
Core/metrics/: PerformanceMonitor.cpp  PerformanceMonitor.h  SystemStats.h
Core/ml/: MLBridge.cpp  MLBridge.h  MLResultCache.cpp  MLResultCache.h
Core/parser/: PacketParser.cpp  PacketParser.h
Core/pipeline/: ProcessingPipeline.cpp  ProcessingPipeline.h
Core/ui/: AlertsPanel.cpp  AlertsPanel.h  LogsViewer.cpp  MainWindow.cpp  MainWindow.h  MetricsBar.cpp  MetricsBar.h  SuspiciousIPTable.cpp  TrafficChart.cpp  TrafficChart.h  TrafficPanel.cpp  TrafficPanel.h  UIBridge.cpp  UIBridge.h
Kernel_module/: Makefile  ids_kmod.c  ids_kmod.h
docs/: architecture.md
kernel_module/: .Module.symvers.cmd  .ids_kmod.ko.cmd  .ids_kmod.o.cmd  Makefile  ids_kmod.c  ids_kmod.h  modules.order
ml/: evaluate.py  ml_scorer.py  preprocess.py  requirements.txt  train_model.py
src/: Types.h
src/capture/: NetlinkReceiver.cpp
src/detection/: AdaptiveThreshold.cpp  AdaptiveThreshold.h  DecisionEngine.cpp  DecisionEngine.h  RuleEngine.cpp  RuleEngine.h
src/features/: FeatureExtractor.cpp  FeatureNormalizer.cpp  FeatureNormalizer.h
src/flow/: FlowTracker.cpp  FlowTracker.h
src/metrics/: PerformanceMonitor.cpp  PerformanceMonitor.h  SystemStats.h
src/ml/: MLBridge.cpp  MLBridge.h  MLResultCache.cpp  MLResultCache.h
src/parser/: PacketParser.cpp
src/pipeline/: PacketQueue.h  ProcessingPipeline.cpp  ProcessingPipeline.h
src/ui/: AlertsPanel.cpp  LogsViewer.h  MainWindow.cpp  MainWindow.ui  SuspiciousIPTable.cpp  SuspiciousIPTable.h
tests/: test_parser.cpp
